roxctl/netpol/connectivity/diff/testdata/acs-security-demos-new-version/diff_output.txt
Connectivity diff:
diff-type: added, source: payments/gateway[Deployment], destination: payments/visa-processor-v2[Deployment], dir1: No Connections, dir2: TCP 8080, workloads-diff-info: workload payments/visa-processor-v2[Deployment] added
diff-type: added, source: {ingress-controller}, destination: frontend/blog[Deployment], dir1: No Connections, dir2: TCP 8080, workloads-diff-info: workload frontend/blog[Deployment] added
diff-type: added, source: {ingress-controller}, destination: zeroday/zeroday[Deployment], dir1: No Connections, dir2: TCP 8080, workloads-diff-info: workload zeroday/zeroday[Deployment] added
